refactor(analyzer): Shift functionality out of analysis phase
Reduce the dependencies of the `AnalyzerWorker.analyze()` function. No
longer pass in a `WorkerContext` and an `AnalyzerJob`, but already
prepared data as part of a `PrepareResult` object. That way, the analysis
phase can be executed in a further restricted environment.

The `WorkerContext` was actually only used for creating a temporary
directory to communicate with a forked Analyzer process. Replace this
with an alternative approach using utility functions from ORT.

Signed-off-by: Oliver Heger <oliver.heger@bosch.com>