@@ -65,6 +65,7 @@ tasks.withType<Test>().configureEach {
     // Required since Java 17, see: https://kotest.io/docs/next/extensions/system_extensions.html#system-environment
     if (javaVersion.isCompatibleWith(JavaVersion.VERSION_17)) {
         jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
+        jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
     }
 
     val testSystemProperties = mutableListOf("gradle.build.dir" to project.layout.buildDirectory.get().toString())
